Fixed overflow issue.

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -23,6 +23,7 @@ $font-weight-5: 700;
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 .main
